--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+h1{
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 9vw;
+}
+
 .App {
   text-align: center;
 }
